<resources>
    <string name="app_name">I Chicken You</string>
    <string name="teste">it works!</string>
    <string name="meuemail" translatable="false">jonathansilva@daum.net</string>
    <string name="assuntoemail">I Chicken You - Bug report</string>
    <string name="mensagememail">Please, describe all details of the bug which you found.</string>
    <string name="enunciadointentbug">Choose a email client to proceed</string>
    <string name="idioma_portugues">pt</string>
    <string name="idioma_coreano">ko</string>
    <string name="idioma_ingles">en</string>
    <string-array name="redes_sociais">
        <item color="#4682e3">Twitter</item>
        <item color="#f0f714">Kakao</item>
        <item color="#02cc05">Close</item>
    </string-array>
    <string name="titlemenunames">Choose a friend\'s name:</string>
    <string name="titlechickenparts">Choose a chicken body part:</string>
    <string name="titlethingstodo">Choose something that you like to do:</string>
    <string name="menu">Menu</string>
    <string name="genders">Which gender is applicable to your friend(s)?</string>
    <string name="diga_amigos">What about your friend(s)?</string>
    <string name="diga_amigas">What about your friend(s)?</string>
    <string name="diga_amigos_e_amigas">What about your friend(s)?</string>
    <string name="a" translatable="false">aa</string>
    <string name="sobre_texto">Application for the purpose of presenting a final paper at the Estácio de Sá Polo Paraíso Universidade em São Paulo, to obtain a bachelor\'s degree in Information Systems. The idea of this application was to make a Brazilian game a contemporary game, perpetuating a cultural game.</string>
    <string name="enunciado">Close this app?</string>
    <string name="querencerrar">Do you want to close this app?</string>
    <string name="fechar">Close</string>
    <string name="naofechar">Don\'t close</string>
    <string name="sobre_som">Sound:</string>
    <string name="no_sound" translatable="false">off</string>
    <string name="off_sound" translatable="false">on</string>
    <string name="bt_share_text">Share</string>
    <string name="bt_close_text">Close</string>
    <string name="bt_play_text">Play</string>
    <string name="bt_save_text">Save</string>
    <string name="bt_erase_text">Erase</string>
    <string name="bt_edit_text">Edit</string>
    <string name="bt_view_text">View</string>
    <string name="bt_advance_text">Advance</string>
    <string name="bt_back_text">Return</string>
    <string name="saved">Saved</string>
    <string name="menu_home">Home</string>
    <string name="menu_see">Display saved results</string>
    <string name="menu_rules">Game rules</string>
    <string name="menu_sobre">About</string>
    <string name="menu_sair">Close</string>
    <string name="label_options">Make your choices</string>
    <string name="label_results">Result:</string>
    <string-array name="malenames">
        <item>Adrian</item>
        <item>Antonio</item>
        <item>Thulius</item>
        <item>Joseph</item>
        <item>Heleno</item>
        <item>Greco</item>
        <item>Gregory</item>
        <item>Lincoln</item>
        <item>Oliver</item>
        <item>Abiel</item>
        <item>Samuel</item>
        <item>Ismael</item>
        <item>Constantino</item>
        <item>Constantin</item>
        <item>Sheik</item>
        <item>Gideão</item>
        <item>Joash</item>
        <item>Jotão</item>
        <item>Jefté</item>
        <item>Jesseh</item>
        <item>Jacob</item>
        <item>Kenny</item>
        <item>Kevin</item>
        <item>Calvin</item>
        <item>Israel</item>
        <item>Noah</item>
        <item>Charlie</item>
        <item>Rudah</item>
        <item>Atilla</item>
        <item>Rugilla</item>
        <item>Romulo</item>
        <item>Remo</item>
        <item>Harold</item>
        <item>Josh</item>
        <item>John</item>
        <item>Bruce</item>
        <item>Bill</item>
        <item>Ethan</item>
        <item>Robin</item>
        <item>Robinson</item>
        <item>Roger</item>
        <item>Rogerio</item>
        <item>Francesco</item>
        <item>Karl</item>
        <item>Otto</item>
        <item>Yuki</item>
        <item>Yu</item>
        <item>Paul</item>
        <item>Peter</item>
        <item>Levi</item>
        <item>Arlo</item>
        <item>Harry</item>
        <item>Oscar</item>
        <item>Luke</item>
        <item>William</item>
        <item>James</item>
        <item>Dionisius</item>
        <item>Mario</item>
        <item>Alfie</item>
        <item>Joshua</item>
        <item>Freddie</item>
        <item>Archie</item>
        <item>Alex</item>
        <item>Alexander</item>
        <item>Luigui</item>
        <item>Marck</item>
        <item>Jonathan</item>
        <item>Adam</item>
        <item>Edward</item>
        <item>Edwardson</item>
        <item>Max</item>
        <item>Jean</item>
        <item>Cornelius</item>
        <item>Trevor</item>
        <item>Arthur</item>
        <item>Logan</item>
        <item>Theo</item>
        <item>Harrison</item>
        <item>Vicent</item>
        <item>Tiberius</item>
        <item>Sebastian</item>
        <item>Andrew</item>
        <item>Finley</item>
        <item>Gabriel</item>
        <item>Yudah</item>
        <item>Xavier</item>
        <item>Julius</item>
        <item>Dylan</item>
        <item>Ariel</item>
        <item>Uri</item>
        <item>Teddy</item>
        <item>Theodore</item>
        <item>Henry</item>
        <item>Toby</item>
        <item>Henrich</item>
        <item>Thomas</item>
        <item>Tom</item>
        <item>Elijah</item>
        <item>Reuben</item>
        <item>Jaxon</item>
        <item>Matthew</item>
        <item>Harvey</item>
        <item>Stanley</item>
        <item>Elliott</item>
        <item>Louis</item>
        <item>Claude</item>
        <item>Frederick</item>
        <item>Simon</item>
        <item>Lewis</item>
        <item>Blake</item>
        <item>Rory</item>
        <item>Ryan</item>
        <item>David</item>
        <item>Tyler</item>
        <item>Richard</item>
        <item>Homero</item>
        <item>Leonard</item>
        <item>Robert</item>
        <item>Dexter</item>
        <item>Ivan</item>
        <item>Ronald</item>
        <item>Austin</item>
        <item>Kai</item>
        <item>Albie</item>
        <item>Carter</item>
        <item>Caleb</item>
        <item>Flavius</item>
        <item>Gilbert</item>
        <item>Bobby</item>
        <item>Bruno</item>
        <item>Romano</item>
        <item>Roman</item>
        <item>Albert</item>
        <item>Ellis</item>
        <item>Ibrahim</item>
        <item>Liam</item>
        <item>Adelmo</item>
        <item>Jesse</item>
        <item>Igor</item>
        <item>Idris</item>
        <item>Jack</item>
        <item>Jackson</item>
        <item>Felix</item>
        <item>Jasper</item>
        <item>Jeovanni</item>
        <item>Geovanni</item>
        <item>Faustinus</item>
        <item>Gerald</item>
        <item>Jamie</item>
        <item>Tai</item>
        <item>Jin</item>
        <item>Tae</item>
        <item>Kain</item>
        <item>Rominik</item>
        <item>Youren</item>
        <item>Chin</item>
        <item>Ho</item>
        <item>Nathan</item>
        <item>Daniel</item>
        <item>Nathaniel</item>
        <item>Milutin</item>
        <item>Batou</item>
        <item>Reno</item>
        <item>Pablo</item>
        <item>Wagner</item>
        <item>Steve</item>
        <item>Steven</item>
        <item>Renon</item>
        <item>Yuri</item>
        <item>Reno</item>
        <item>Thadeus</item>
        <item>Duke</item>
        <item>Zachary</item>
        <item>Zeke</item>
        <item>Richter</item>
        <item>Isaac</item>
        <item>Maxim</item>
        <item>Philip</item>
        <item>Adonis</item>
        <item>Victor</item>
        <item>Johnson</item>
        <item>Matheus</item>
        <item>Mathaias</item>
        <item>Leonardo</item>
        <item>Solomon</item>
        <item>Rocky</item>
        <item>Apollo</item>
        <item>Roy</item>
        <item>Dante</item>
        <item>Tacius</item>
        <item>Hayden</item>
        <item>Uxío</item>
        <item>Nicolas</item>
        <item>Chuck</item>
        <item>Rafe</item>
        <item>Doug</item>
        <item>Manoel</item>
        <item>Peterson</item>
        <item>George</item>
        <item>Valentim</item>
        <item>Cedrico</item>
        <item>Marco</item>
        <item>Achak</item>
        <item>Reiner</item>
        <item>Berthold</item>
        <item>Marcel</item>
        <item>Nino</item>
        <item>Adahy</item>
        <item>Galliard</item>
        <item>Gilliard</item>
        <item>Omar</item>
        <item>Bodaway</item>
        <item>Riko</item>
        <item>Haruto</item>
        <item>Kohei</item>
        <item>Chaska</item>
    </string-array>
    <string name="termos">Do you agree the rules below?</string>
    <string name="aceito">I agree</string>
    <string name="recuso">I refuse</string>
</resources>