<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_consultar"
            android:icon="@drawable/ic_book_black_24dp"
            android:title="@string/menu_see" />
        <item
            android:id="@+id/nav_regras"
            android:icon="@drawable/regras"
            android:title="@string/menu_rules" />
        <item
            android:id="@+id/nav_sobre"
            android:icon="@drawable/jogo"
            android:title="@string/menu_sobre" />

        <item
            android:id="@+id/nav_sair"
            android:icon="@drawable/fechar"
            android:title="@string/menu_sair" />
    </group>

</menu>
