<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#fff"
    android:id="@+id/conteudo_amigos"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Txt_view_escolher_nome_de_amigo"
        android:layout_marginLeft="10sp"
        android:text="@string/titlemenunames"
        android:textFontWeight="bolder" />

    <AutoCompleteTextView
        android:id="@+id/nome_autocomplete"
        android:layout_width="match_parent"
        android:completionThreshold="3"
        android:layout_height="wrap_content"
        android:text=""
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10sp"
        android:id="@+id/Txt_view_escolher_parte_da_galinha"
        android:textFontWeight="bolder"
        android:text="@string/titlechickenparts"
        />

    <Spinner
        style="@style/Widget.AppCompat.DropDownItem.Spinner"
        android:id="@+id/menu_partes_galinha"
        android:spinnerMode="dropdown"
        android:layout_height="70dp"
        android:layout_width="match_parent"
        android:entries="@array/chickenparts"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Txt_view_escolher_algo_que_gosta_de_fazer"
        android:textFontWeight="bolder"
        android:layout_marginLeft="10sp"
        android:text="@string/titlethingstodo"
    />

    <AutoCompleteTextView
        android:id="@+id/fazer_autocomplete"
        android:layout_width="match_parent"
        android:completionThreshold="3"
        android:layout_height="wrap_content"
        android:text="" />

    <ImageButton
        android:id="@+id/bt_adicionar"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:background="@drawable/button_back"
        android:tint="@android:color/white"
        app:srcCompat="@drawable/mais_um" />

    <ImageButton
        android:id="@+id/bt_next_step"
        android:layout_marginBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:background="@drawable/button_back"
        android:tint="@android:color/white"
        app:srcCompat="@drawable/ic_next" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorPrimaryDark"/>


</LinearLayout>
